fixed portfolio image on homepage alignment

--- a/button.css
+++ b/button.css
@@ -51,7 +51,7 @@
   /*  Corner button END  */
 
   .image-container {
-    padding: 0px 10%;
+    padding: 0px 30%;
     position: relative;
     display: inline-block;
   }
